# transaction-similarity-analyzer

./: LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/:  micro_100k_results.txt  benchmark_algorithms.py  benchmark_parallelization.py  parallel_scaling_results.md
benchmarks/results/: micro_100k_results.txt  parallelization_benchmark_results.txt
examples/: quick_start.py
src/similarity_analyzer/: __init__.py  analyzer.py  config.py  similarity.py  utils.py
tests/: test_similarity.py
