[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-similarity-analyzer"
version = "0.1.0"
description = "A high-performance string similarity analysis tool for procurement fraud detection, with benchmarks comparing parallelization strategies (Joblib, multiprocessing) and similarity algorithms (RapidFuzz, SequenceMatcher)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Kunwon Saw" },
]
keywords = [
    "similarity",
    "fuzzy-matching",
    "rapidfuzz",
    "multiprocessing",
    "joblib",
    "fraud-detection",
    "procurement",
    "nlp",
    "benchmarking",
    "parallel-processing",
    "transaction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research/Engineers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "rapidfuzz>=3.0",
    "regex>=2023.0",
    "joblib>=1.3",
    "tqdm>=4.65",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Repository = "https://github.com/kunwonsaw/transaction-similarity-analyzer"
Issues = "https://github.com/kunwonsaw/transaction-similarity-analyzer/issues"

[project.scripts]
transaction-similarity-analyzer = "similarity_analyzer.analyzer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
